--- a/tools/index.html
+++ b/tools/index.html
@@ -13,57 +13,56 @@
 <nav class="nav-container" aria-label="Tools"><div class="nav" id="main-nav"></div></nav>
 
 <main class="container page-in">
-
   <div class="tool-grid">
     <a class="tool-card" href="cipher/">
       <div class="tool-card-num">01</div>
       <div class="tool-card-name">Cipher Tool</div>
-      <div class="tool-card-desc">Auto-detect and decode Caesar, Base64, Morse, Atbash, Rail Fence, and more in one pass.</div>
+      <div class="tool-card-desc">Paste any encoded text and it will try to decode it automatically — Caesar, Base64, Morse, Atbash, Rail Fence, and more.</div>
     </a>
     <a class="tool-card" href="freq/">
       <div class="tool-card-num">02</div>
       <div class="tool-card-name">Frequency Analysis</div>
-      <div class="tool-card-desc">Letter frequency chart versus English. Identifies Caesar shifts using chi-squared scoring.</div>
+      <div class="tool-card-desc">Shows how often each letter appears in your text. Useful for figuring out simple substitution ciphers.</div>
     </a>
     <a class="tool-card" href="vigenere/">
       <div class="tool-card-num">03</div>
       <div class="tool-card-name">Vigenère Cracker</div>
-      <div class="tool-card-desc">Dictionary and brute-force attacks with built-in Index of Coincidence key-length analysis.</div>
+      <div class="tool-card-desc">Tries to crack a Vigenère cipher by testing words as possible keys, or by brute-forcing short key combinations.</div>
     </a>
     <a class="tool-card" href="beaufort/">
       <div class="tool-card-num">04</div>
       <div class="tool-card-name">Beaufort Cracker</div>
-      <div class="tool-card-desc">Dictionary attack against the Beaufort cipher. Self-reciprocal — encrypts and decrypts identically.</div>
+      <div class="tool-card-desc">Tries to crack a Beaufort cipher by testing dictionary words as the key.</div>
     </a>
     <a class="tool-card" href="hexahue/">
       <div class="tool-card-num">05</div>
       <div class="tool-card-name">Hexahue Decoder</div>
-      <div class="tool-card-desc">Decode the Hexahue color-block cipher with a full visual grid alongside the decoded text.</div>
+      <div class="tool-card-desc">Decodes Hexahue — a cipher where each letter is represented by a pattern of six colors. Enter the color codes and get the text.</div>
     </a>
     <a class="tool-card" href="ioc/">
       <div class="tool-card-num">06</div>
       <div class="tool-card-name">IoC Analyzer</div>
-      <div class="tool-card-desc">Index of Coincidence analysis to surface key lengths in Vigenère and polyalphabetic ciphers.</div>
+      <div class="tool-card-desc">Helps you figure out the key length of a cipher. Shows a chart — taller bars mean a more likely key length.</div>
     </a>
     <a class="tool-card" href="word-finder/">
       <div class="tool-card-num">07</div>
       <div class="tool-card-name">Word Finder</div>
-      <div class="tool-card-desc">Find valid English words from constrained letter positions using a simple bracket notation.</div>
+      <div class="tool-card-desc">Know some letters but not all? Enter the possible letters for each position and it will find matching words.</div>
     </a>
     <a class="tool-card" href="keyboard/">
       <div class="tool-card-num">08</div>
       <div class="tool-card-name">Keyboard Heatmap</div>
-      <div class="tool-card-desc">Letter frequency mapped onto QWERTY, AZERTY, QWERTZ, or Dvorak. Useful for keyboard-walk ciphers.</div>
+      <div class="tool-card-desc">Highlights which keys are used most in your text, shown on a keyboard layout. Supports QWERTY, AZERTY, QWERTZ, and Dvorak.</div>
     </a>
     <a class="tool-card" href="punycode/">
       <div class="tool-card-num">09</div>
       <div class="tool-card-name">Punycode</div>
-      <div class="tool-card-desc">Full RFC 3492 decode and encode for internationalized domain names. Shows Unicode codepoints.</div>
+      <div class="tool-card-desc">Converts Punycode (used in domain names) to readable text and back.</div>
     </a>
     <a class="tool-card" href="anagram/">
       <div class="tool-card-num">10</div>
       <div class="tool-card-name">Anagram Solver</div>
-      <div class="tool-card-desc">Pre- and post-anagram pattern solver with dictionary verification of all candidate words.</div>
+      <div class="tool-card-desc">Rearranges scrambled letters into valid words. Supports pattern-based solving to narrow down the results.</div>
     </a>
   </div>
 </main>
