--- a/tools/index.html
+++ b/tools/index.html
@@ -64,6 +64,11 @@
       <div class="tool-card-name">Anagram Solver</div>
       <div class="tool-card-desc">Rearranges scrambled letters into valid words. Supports pattern-based solving to narrow down the results.</div>
     </a>
+    <a class="tool-card" href="b64brute/">
+      <div class="tool-card-num">11</div>
+      <div class="tool-card-name">Base64 Bruteforce</div>
+      <div class="tool-card-desc">Given a Base64 string with unknown casing, tries all case combinations per chunk and shows every valid printable decoding.</div>
+    </a>
   </div>
 </main>
 
