--- a/tools/b64brute/index.html
+++ b/tools/b64brute/index.html
@@ -71,7 +71,7 @@
 
   <div class="input-group">
     <label>Base64 Input</label>
-    <input type="text" id="b64brute-input" placeholder="e.g. aGVsbG8=">
+    <input type="text" id="b64brute-input" placeholder="AHR0CHM6LY93D3CUEW91DHVIZS5JB20VD2F0Y2G/DJ1RQJDBQ3I3CFV1RQ==">
   </div>
 
   <div class="btn-group">
