--- a/tools/b64brute/index.html
+++ b/tools/b64brute/index.html
@@ -64,7 +64,7 @@
       <div class="tool-title-code">B6</div>
       <div class="tool-title-text">
         <h1>Base64 Bruteforce</h1>
-        <div class="tool-description">Given a Base64 string where the casing is unknown or scrambled, this tool tries all case combinations per 4-character chunk and shows the valid printable decodings. You can manually pick the best option for each chunk.</div>
+        <div class="tool-description">Recover printable text that was encoded in b64 but then lost casing e.g. "SGVSBG8GV29YBGQH". You can manually pick the best option for each chunk.</div>
       </div>
     </div>
   </div>
