--- a/tools/index.html
+++ b/tools/index.html
@@ -69,6 +69,11 @@
       <div class="tool-card-name">Base64 Bruteforce</div>
       <div class="tool-card-desc">Given a Base64 string with unknown casing, tries all case combinations per chunk and shows every valid printable decoding.</div>
     </a>
+    <a class="tool-card" href="binspace/">
+      <div class="tool-card-num">12</div>
+      <div class="tool-card-name">Spaceless Binary</div>
+      <div class="tool-card-desc">Recovers text from binary, decimal, octal, or hex that has had its spacing and leading zeros removed. Supports all traversal modes plus interactive byte-by-byte selection.</div>
+    </a>
   </div>
 </main>
 
