--- a/tools/index.html
+++ b/tools/index.html
@@ -17,7 +17,7 @@
     <a class="tool-card" href="cipher/">
       <div class="tool-card-num">01</div>
       <div class="tool-card-name">Cipher Tool</div>
-      <div class="tool-card-desc">Paste any encoded text and it will try to decode it automatically — Caesar, Base64, Morse, Atbash, Rail Fence, and more.</div>
+      <div class="tool-card-desc">Paste any encoded text and it will try to decode it automatically; Caesar, Base64, Morse, Atbash, Rail Fence, and more.</div>
     </a>
     <a class="tool-card" href="freq/">
       <div class="tool-card-num">02</div>
@@ -37,12 +37,12 @@
     <a class="tool-card" href="hexahue/">
       <div class="tool-card-num">05</div>
       <div class="tool-card-name">Hexahue Decoder</div>
-      <div class="tool-card-desc">Decodes Hexahue — a cipher where each letter is represented by a pattern of six colors. Enter the color codes and get the text.</div>
+      <div class="tool-card-desc">Decodes Hexahue; A cipher where each letter is represented by a pattern of six colors. Enter the color codes and get the text.</div>
     </a>
     <a class="tool-card" href="ioc/">
       <div class="tool-card-num">06</div>
       <div class="tool-card-name">IoC Analyzer</div>
-      <div class="tool-card-desc">Helps you figure out the key length of a cipher. Shows a chart — taller bars mean a more likely key length.</div>
+      <div class="tool-card-desc">Helps you figure out the key length of a cipher. Shows a chart; Taller bars mean a more likely key length.</div>
     </a>
     <a class="tool-card" href="word-finder/">
       <div class="tool-card-num">07</div>
