--- a/tools/word-finder/index.html
+++ b/tools/word-finder/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Word Finder — Ciphertool</title>
+  <title>Word Finder Ciphertool</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     <strong>Bracket notation</strong>
     Each <code>[bracket]</code> is one position in the word. List possible letters or multi-character options separated by spaces.<br>
     Single chars: <code>[ABC][DEF][GHI]</code><br>
-    Multi-char: <code>[TH ST][EI][R]</code> — each space-separated token is one option for that position.
+    Multi-char: <code>[TH ST][EI][R]</code>  each space-separated token is one option for that position.
   </div>
 
   <div class="input-group">
