--- a/tools/b64brute/index.html
+++ b/tools/b64brute/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Base64 Bruteforce — Ciphertool</title>
+  <title>Base64 Bruteforce Ciphertool</title>
   <link rel="stylesheet" href="../css/style.css">
   <style>
     .b64-select-area {
