--- a/tools/cipher/index.html
+++ b/tools/cipher/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Cipher Tool — Ciphertool</title>
+  <title>Cipher Tool</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
