--- a/tools/hexahue/index.html
+++ b/tools/hexahue/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Hexahue Decoder — Ciphertool</title>
+  <title>Hexahue Decoder</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     <code>p</code> pink &nbsp; <code>r</code> red &nbsp; <code>g</code> green &nbsp; <code>y</code> yellow &nbsp; <code>b</code> blue &nbsp; <code>c</code> cyan<br>
     <strong>Color codes — Numbers</strong>
     <code>G</code> gray &nbsp; <code>B</code> black &nbsp; <code>w</code> white<br>
-    <strong>Format:</strong> space-separated 6-character codes — e.g. <code>prgybc rpgybc rgpybc</code>
+    <strong>Format:</strong> space-separated 6-character codes; e.g. <code>prgybc rpgybc rgpybc</code>
   </div>
 
   <div class="input-group">
