--- a/tools/punycode/index.html
+++ b/tools/punycode/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Punycode — Ciphertool</title>
+  <title>Punycode</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -32,8 +32,8 @@
   <div class="input-group">
     <label>Direction</label>
     <select id="punycode-dir">
-      <option value="decode">Decode — punycode to Unicode</option>
-      <option value="encode">Encode — Unicode to punycode</option>
+      <option value="decode">Decode punycode to Unicode</option>
+      <option value="encode">Encode Unicode to punycode</option>
     </select>
   </div>
 
