--- a/tools/vigenere/index.html
+++ b/tools/vigenere/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="ct-base" content="../">
-  <title>Vigenère Cracker — Ciphertool</title>
+  <title>Vigenère Cracker</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
   <div class="instructions">
     <strong>How it works</strong>
     Dictionary mode tries every word in the wordlist as a key. Brute force tries all letter combinations up to a chosen length.
-    The IoC chart highlights candidate key lengths — look for bars near <code>0.067</code> (English average).
+    The IoC chart highlights candidate key lengths, look for bars near <code>0.067</code> (English average).
     Brute force becomes very slow beyond key length 4.
   </div>
 
